option('MOD_MEMORY', type: 'boolean', description: 'Enable Memory Cache module', value: true)
option('MOD_MEMCACHED', type: 'boolean', description: 'Enable Memcached Cache module', value: true)
option('MOD_REDIS', type: 'boolean', description: 'Enable Redis Cache module', value: true)
option('MOD_SDORM_SQL', type: 'boolean', description: 'Enable SQL Sdorm module', value: true)
option('MOD_SDORM_MONGO', type: 'boolean', description: 'Enable Mongo Sdorm module', value: false)
option('MOD_SDORM_SCYLLA', type: 'boolean', description: 'Enable Scylla Sdorm module', value: false)
option('MOD_SOLR', type: 'boolean', description: 'Enable SOLR Search module', value: true)
option('MOD_ELASTIC', type: 'boolean', description: 'Enable Elasticsearch Search module', value: false)
option('MOD_SER_BIN', type: 'boolean', description: 'Enable Binary Serialization module', value: true)
option('MOD_JOBS', type: 'boolean', description: 'Enable Jobs module', value: true)
option('SRV_ALL', type: 'boolean', description: 'Build All inbuilt HTTP Server Engines', value: true)
option('SRV_EMB', type: 'boolean', description: 'Embedded Http Server Engine', value: true)
option('WITH_RAPIDJSON', type: 'boolean', description: 'Use rapidjson for json handling', value: true)
option('WITH_PUGIXML', type: 'boolean', description: 'Use pugixml for xml handling', value: true)
option('WITH_PICOEV', type: 'boolean', description: 'Enable picoev engine', value: false)